Add NATS/notification logics