@@ -1,91 +1,129 @@
 package ing.beribtur.storejpa.aggregate.notification;
 
+import ing.beribtur.accent.message.Offset;
 import ing.beribtur.aggregate.notification.entity.Notification;
-import ing.beribtur.aggregate.notification.entity.vo.*;
+import ing.beribtur.aggregate.notification.entity.vo.ChannelType;
+import ing.beribtur.aggregate.notification.entity.vo.Status;
 import ing.beribtur.aggregate.notification.store.NotificationStore;
 import ing.beribtur.storejpa.aggregate.notification.jpo.NotificationJpo;
 import ing.beribtur.storejpa.aggregate.notification.repository.NotificationRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.BeanUtils;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 @Repository
 @RequiredArgsConstructor
 public class NotificationJpaStore implements NotificationStore {
     //
     private final NotificationRepository notificationRepository;
-    private final ContactJpaStore contactJpaStore;
 
     @Override
     public void create(Notification notification) {
+        //
         NotificationJpo notificationJpo = new NotificationJpo(notification);
-
         notificationRepository.save(notificationJpo);
-        notification.setId(notificationJpo.getId());
+    }
+
+    @Override
+    public void createAll(List<Notification> notifications) {
+        //
+        notificationRepository.saveAll(notifications.stream().map(NotificationJpo::new).collect(Collectors.toList()));
     }
 
     @Override
     public Notification retrieve(String id) {
-        NotificationJpo notificationJpo = notificationRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Notification not found: " + id));
-        return notificationJpo.toDomain();
+        //
+        return notificationRepository.findById(id)
+            .map(NotificationJpo::toDomain)
+            .orElse(null);
     }
 
     @Override
-    public List<Notification> retrieveAll(List<String> ids) {
-        List<NotificationJpo> notificationJpos = notificationRepository.findAllById(ids);
-        return notificationJpos.stream()
-                .map(NotificationJpo::toDomain)
-                .collect(Collectors.toList());
+    public List<Notification> retrieveAll(List<String> notificationIds) {
+        //
+        Iterable<NotificationJpo> allById = notificationRepository.findAllById(notificationIds);
+        return NotificationJpo.toDomains(StreamSupport.stream(allById.spliterator(), false).collect(Collectors.toList()));
+    }
+
+    @Override
+    public List<Notification> retrieveList(Offset offset) {
+        //
+        Pageable pageable = PageRequest.of(offset.page(), offset.limit());
+        return notificationRepository.findAll(pageable).map(NotificationJpo::toDomain).toList();
     }
 
     @Override
     public void update(Notification notification) {
-        NotificationJpo notificationJpo = notificationRepository.findById(notification.getId())
-                .orElseThrow(() -> new IllegalArgumentException("Notification not found: " + notification.getId()));
+        //
+        notificationRepository.save(new NotificationJpo(notification));
+    }
 
-        // Update the JPO with the domain entity's values
-        NotificationJpo updatedJpo = new NotificationJpo(notification);
-        BeanUtils.copyProperties(notificationJpo, updatedJpo);
-
-        notificationRepository.save(updatedJpo);
+    @Override
+    public void delete(Notification notification) {
+        //
+        notificationRepository.delete(new NotificationJpo(notification));
     }
 
     @Override
     public void delete(String id) {
+        //
         notificationRepository.deleteById(id);
     }
 
     @Override
+    public boolean exists(String id) {
+        //
+        return notificationRepository.existsById(id);
+    }
+
+    @Override
     public List<Notification> retrieveByReceiverId(String receiverId) {
-        return NotificationJpo.toDomains(notificationRepository.findByReceiverId(receiverId));
+        //
+        return notificationRepository.findByReceiverId(receiverId).stream()
+            .map(NotificationJpo::toDomain)
+            .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Notification> retrieveBySenderId(String senderId) {
+        //
+        return notificationRepository.findBySenderId(senderId).stream()
+            .map(NotificationJpo::toDomain)
+            .collect(Collectors.toList());
     }
 
     @Override
     public List<Notification> retrieveByStatus(Status status) {
-        return NotificationJpo.toDomains(notificationRepository.findByStatus(status));
+        //
+        return notificationRepository.findByStatus(status).stream()
+            .map(NotificationJpo::toDomain)
+            .collect(Collectors.toList());
     }
 
     @Override
     public List<Notification> retrieveByChannelType(ChannelType channelType) {
-        return NotificationJpo.toDomains(notificationRepository.findByChannelType(channelType));
+        //
+        return notificationRepository.findByChannelType(channelType).stream()
+            .map(NotificationJpo::toDomain)
+            .collect(Collectors.toList());
     }
 
     @Override
     public List<Notification> retrieveByReceiverIdAndStatus(String receiverId, Status status) {
-        return NotificationJpo.toDomains(notificationRepository.findByReceiverIdAndStatus(receiverId, status));
+        //
+        return notificationRepository.findByReceiverIdAndStatus(receiverId, status).stream()
+            .map(NotificationJpo::toDomain)
+            .collect(Collectors.toList());
     }
 
-    // Additional query methods
-    public List<Notification> findByType(NotificationType type) {
-        return NotificationJpo.toDomains(notificationRepository.findByType(type));
+    @Override
+    public long getNextSequence(String senderId) {
+        //
+        return notificationRepository.getNextSequenceForSender(senderId);
     }
-
-    public List<Notification> findBySenderId(String senderId) {
-        return NotificationJpo.toDomains(notificationRepository.findBySenderId(senderId));
-    }
-
 }
